--- a/styles.css
+++ b/styles.css
@@ -90,16 +90,28 @@ header nav ul li a:hover {
 
 .intro {
   display: flex;
+  width: 50%;
+  /* margin: 0 auto; */
   padding: 0 20px;
   flex-direction: column;
   justify-content: left;
   text-align: left;
 }
 
+.intro h1 {
+    margin-bottom: 24px;
+    font-size: 72px;
+}
+
+.intro h2 {
+    font-size: 36px;
+    margin-bottom: 24px;
+}
 .intro-buttons {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     gap: 1rem;
+    margin-top: 48px;
 }
 
 .portfolio-link {
